# Metody-wyboru-klient-w-w-odpornym-uczeniu-federacyjnym

./: pyproject.toml
configs/: default.yaml
configs/grids/: full_cross.yaml
fl_lab/aggregations/: __init__.py  base.py  bulyan.py  fedavg.py  fltrust.py  krum.py  trimmed_mean.py
fl_lab/analysis/: client_level.py  constants.py  cost_plots.py  full_grid.py  loader.py  plots.py  statistics.py  tables.py
fl_lab/attacks/: __init__.py  base.py  gaussian_noise.py  label_flip.py  sign_flip.py
fl_lab/data/: cifar10.py  distribution.py
fl_lab/fl/: client.py  server.py  simulation.py  weights.py
fl_lab/metrics/: __init__.py
fl_lab/models/: __init__.py  simple_cnn.py
fl_lab/strategies/: __init__.py  adaptive_mab.py  base.py  cyclic.py  random_selector.py  reputation.py
fl_lab/utils/: config.py  logging.py  seed.py
results/full_cross/adaptive_mab_bulyan_gaussian_noise_pct10/seed_2026/: client_metrics.csv  config.json  final_summary.json  round_metrics.csv
results/full_cross/adaptive_mab_bulyan_gaussian_noise_pct20/seed_2026/: client_metrics.csv  config.json  final_summary.json  round_metrics.csv
results/full_cross/adaptive_mab_bulyan_gaussian_noise_pct40/seed_2026/: client_metrics.csv  config.json  final_summary.json  round_metrics.csv
results/full_cross/adaptive_mab_bulyan_label_flip_pct10/seed_2026/: client_metrics.csv  config.json  final_summary.json  (+1 more)
results/full_cross/figures/: summary_table.csv  summary_table.tex
scripts/: analyze_results.py  run_experiment.py  run_grid.py  smoke_test.py  visualize_client_level.py  visualize_full_grid.py
(+704 files in other folders)
